--- a/views/partials/newsletter.ejs
+++ b/views/partials/newsletter.ejs
@@ -12,9 +12,9 @@
           <div class="row align-items-end">
             <div class="col-lg-6">
               <div class="title-style-two">
-                <div class="sc-title fw-500">Subscirbe Now</div>
+                <div class="sc-title fw-500">Be In The Know</div>
                 <h4 class="main-title fw-bold tx-dark">
-                  New user? Start your free trial now.
+                  Subscribe to our newsletter today
                 </h4>
               </div>
               <!-- /.title-style-two -->
@@ -25,9 +25,7 @@
                   <input type="email" placeholder="Email address" />
                   <button class="tran3s position-absolute">Subscribe</button>
                 </form>
-                <p class="m0 pt-10">
-                  Already a member? <a href="#" class="tx-dark">Sign in.</a>
-                </p>
+                <!-- <p class="m0 pt-10">Already a member? <a href="#" class="tx-dark">Sign in.</a></p> -->
               </div>
               <!-- /.subscribe-form -->
             </div>
