--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
 					<div class="card-style-one pe-xxl-5 position-relative mt-40">
 						<div class="icon d-flex align-items-center justify-content-center"
 							style="background-color: rgba(255, 171, 51, 0.18);"><img src="images/lazy.svg"
-								data-src="images/icon/icon_01.svg" alt="" class="lazy-img"></div>
+								data-src="images/icon/icon_01.svg" alt="" class="lazy-img" width="50px"></div>
 						<h5 class="fw-500 mt-35 mb-25"><a href="/services/marketing-pr" class="tran3s tx-dark">Marketing
 								PR</a></h5>
 						<p class="mb-25">We bridge the gap between traditional media and the brave new world of digital
@@ -90,7 +90,7 @@
 					<div class="card-style-one pe-xxl-5 position-relative mt-40">
 						<div class="icon d-flex align-items-center justify-content-center"
 							style="background-color: rgba(100, 219, 226, 0.18);"><img src="images/lazy.svg"
-								data-src="images/icon/icon_02.svg" alt="" class="lazy-img"></div>
+								data-src="images/icon/icon_02.svg" alt="" class="lazy-img" ></div>
 						<h5 class="fw-500 mt-35 mb-25"><a href="/services/influence-marketing" class="tran3s tx-dark">B2B2C
 								Influence Marketing</a></h5>
 						<p class="mb-25">Connect with your customers on the platforms they trust most, and gain the
@@ -104,7 +104,7 @@
 					<div class="card-style-one pe-xxl-5 position-relative mt-40">
 						<div class="icon d-flex align-items-center justify-content-center"
 							style="background-color: rgba(255, 160, 194, 0.18);"><img src="images/lazy.svg"
-								data-src="images/icon/icon_03.svg" alt="" class="lazy-img"></div>
+								data-src="images/icon/icon_03.svg" alt="" class="lazy-img" ></div>
 						<h5 class="fw-500 mt-35 mb-25"><a href="/services/content-development" class="tran3s tx-dark">Content
 								Marteting</a></h5>
 						<p class="mb-25">Our professional content development services ensure a brand voice unparalleled quality to keep your audience engaged.
@@ -117,7 +117,7 @@
 					<div class="card-style-one pe-xxl-5 position-relative mt-40">
 						<div class="icon d-flex align-items-center justify-content-center"
 							style="background-color: rgba(246, 243, 255, 1);"><img src="images/lazy.svg"
-								data-src="images/icon/icon_04.svg" alt="" class="lazy-img"></div>
+								data-src="images/icon/icon_04.svg" alt="" class="lazy-img" ></div>
 						<h5 class="fw-500 mt-35 mb-25"><a href="/services/brand-storytelling" class="tran3s tx-dark">Brand
 								Storytelling</a></h5>
 						<p class="mb-25">we employ creative storytelling, thorough market research, business strategy workshops and more to tie the physical premises together with an idea, the concept, a story.
@@ -130,7 +130,7 @@
 					<div class="card-style-one pe-xxl-5 position-relative mt-40">
 						<div class="icon d-flex align-items-center justify-content-center"
 							style="background-color: rgba(246, 243, 255, 1);"><img src="images/lazy.svg"
-								data-src="images/icon/icon_04.svg" alt="" class="lazy-img"></div>
+								data-src="images/icon/icon_28.svg" alt="" class="lazy-img" width="35px"></div>
 						<h5 class="fw-500 mt-35 mb-25"><a href="/services/online-reputation-management" class="tran3s tx-dark">Online
 								Reputation Managemnt</a></h5>
 						<p class="mb-25">We help our clients build valuable reputations through search remediation and strategic content development and marketing.
@@ -143,7 +143,7 @@
 					<div class="card-style-one pe-xxl-5 position-relative mt-40">
 						<div class="icon d-flex align-items-center justify-content-center"
 							style="background-color: rgba(246, 243, 255, 1);"><img src="images/lazy.svg"
-								data-src="images/icon/icon_04.svg" alt="" class="lazy-img"></div>
+								data-src="images/icon/icon_33.svg" alt="" class="lazy-img" width="50px"></div>
 						<h5 class="fw-500 mt-35 mb-25"><a href="/services/digital-academy" class="tran3s tx-dark">Converged
 								PR Training</a></h5>
 						<p class="mb-25">The core of our service is based on the objective investment advice we seek to
@@ -156,10 +156,23 @@
 					<div class="card-style-one pe-xxl-5 position-relative mt-40">
 						<div class="icon d-flex align-items-center justify-content-center"
 							style="background-color: rgba(246, 243, 255, 1);"><img src="images/lazy.svg"
-								data-src="images/icon/icon_04.svg" alt="" class="lazy-img"></div>
+								data-src="images/icon/icon_40.svg" alt="" class="lazy-img" width="35px"></div>
 						<h5 class="fw-500 mt-35 mb-25"><a href="/services/software-development-and-web-design" class="tran3s tx-dark">Software
 								Development & Web Design</a></h5>
 						<p class="mb-25">Our team combines best industry practices, technology expertise, and business domain knowledge to drive digital transformation.
+						</p>
+						<a href="/services/software-development-and-web-design"><img src="images/lazy.svg" data-src="images/icon/icon_05.svg"
+								alt="" class="lazy-img"></a>
+					</div> <!-- /.card-style-one -->
+				</div>
+				<div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+					<div class="card-style-one pe-xxl-5 position-relative mt-40">
+						<div class="icon d-flex align-items-center justify-content-center"
+							style="background-color: rgba(246, 243, 255, 1);"><img src="images/lazy.svg"
+								data-src="images/icon/icon_14.svg" alt="" class="lazy-img" width="50px"></div>
+						<h5 class="fw-500 mt-35 mb-25"><a href="/services/software-development-and-web-design" class="tran3s tx-dark">Digital Academy</a></h5>
+						<p class="mb-25">
+							Our curriculum is designed to provide you with comprehensive knowledge and skills in digital communication
 						</p>
 						<a href="/services/software-development-and-web-design"><img src="images/lazy.svg" data-src="images/icon/icon_05.svg"
 								alt="" class="lazy-img"></a>
