contact form works with mongodb, google reCaptcha implemented, dashbord page to show all contact form entries also implemented. had challenges successfully adding pagination

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -471,42 +471,7 @@
 	</div> <!-- /.wrapper -->
 
 
-
-
-	<!--
-			=====================================================
-				Fancy Short Banner One
-			=====================================================
-			-->
-	<div class="fancy-short-banner-one mt-170 lg-mt-120">
-		<div class="container">
-			<div class="bg-wrapper position-relative wow fadeInUp">
-				<div class="shapes shape-one"></div>
-				<div class="inner-wrapper">
-					<div class="subscribe-area">
-						<div class="row align-items-end">
-							<div class="col-lg-6">
-								<div class="title-style-two">
-									<div class="sc-title fw-500 ">Be In The Know</div>
-									<h4 class="main-title fw-bold tx-dark">Subscribe to our newsletter today</h4>
-								</div> <!-- /.title-style-two -->
-							</div>
-							<div class="col-lg-6">
-								<div class="subscribe-form">
-									<form action="#">
-										<input type="email" placeholder="Email address">
-										<button class="tran3s position-absolute">Subscribe</button>
-									</form>
-									<!-- <p class="m0 pt-10">Already a member? <a href="#" class="tx-dark">Sign in.</a></p> -->
-								</div> <!-- /.subscribe-form -->
-							</div>
-						</div>
-					</div> <!-- /.subscribe-area -->
-				</div>
-			</div> <!-- /.bg-wrapper -->
-		</div>
-	</div> <!-- /.fancy-short-banner-one -->
-
+	<%- include('./partials/newsletter') %>
 
 	<%- include('./partials/footer') %>
 </div>
