--- a/views/partials/newsletter.ejs
+++ b/views/partials/newsletter.ejs
@@ -21,7 +21,7 @@
             </div>
             <div class="col-lg-6">
               <div class="subscribe-form">
-                <form action="#">
+                <form action="https://app.convertkit.com/forms/5216054/subscriptions">
                   <input type="email" placeholder="Email address" />
                   <button class="tran3s position-absolute">Subscribe</button>
                 </form>
