--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -13,7 +13,7 @@
 				<div class="row">
 					<div class="col-lg-7">
 						<div class="form-style-three md-mb-60 wow fadeInLeft">
-							<form action="" id="contact-form"  data-toggle="validator">
+						<form action="/contact-form" method="post" id="contact-form"  data-toggle="validator">
 								<div class="messages"></div>
 								<div class="row controls">
 									<div class="col-12">
@@ -37,7 +37,8 @@
 											<div class="help-block with-errors"></div>
 										</div>
 									</div>
-									<div class="col-12"><button class="btn-one fw-500 w-100 text-uppercase fs-14 d-block">Send Message</button></div>
+									<!-- <input type="file" name="documents" /> enctype="multipart/form-data" -->
+									<div class="col-12"><button data-sitekey="<%- process.env.RECAPTCHA_KEY %>" data-callback="onSubmit"class="g-recaptcha btn-one fw-500 w-100 text-uppercase fs-14 d-block">Send Message</button></div>
 								</div>
 							</form>
 						</div> <!-- /.form-style-three -->
