Form data sanitization

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -38,7 +38,7 @@
 										</div>
 									</div>
 									<!-- <input type="file" name="documents" /> enctype="multipart/form-data" -->
-									<div class="col-12"><button data-sitekey="<%- process.env.RECAPTCHA_KEY %>" data-callback="onSubmit"class="g-recaptcha btn-one fw-500 w-100 text-uppercase fs-14 d-block">Send Message</button></div>
+									<div class="col-12"><button data-sitekey="<%= process.env.RECAPTCHA_KEY %>" data-callback="onSubmit"class="g-recaptcha btn-one fw-500 w-100 text-uppercase fs-14 d-block">Send Message</button></div>
 								</div>
 							</form>
 						</div> <!-- /.form-style-three -->
