--- a/views/partials/solutions/cihan-metricwire.ejs
+++ b/views/partials/solutions/cihan-metricwire.ejs
@@ -60,10 +60,20 @@
                   class="lazy-img image-meta w-100"
                 />
                 <p>
-                    Our Packs With our Press Release Distribution pack, your news story will be published on over 300 news outlets globally, guaranteeing more than 100 million impressions, with detailed analytics to track the success of your story.
+                  Our Packs With our Press Release Distribution pack, your news
+                  story will be published on over 300 news outlets globally,
+                  guaranteeing more than 100 million impressions, with detailed
+                  analytics to track the success of your story.
                 </p>
                 <p>
-                    Looking for more targeted placement? Our Sponsored Placement pack allows you to secure premium placements on select publishers in Africa, Europe, and North America. From Forbes and The Guardian to AllAfrica and more, we can help your brand get the placement it deserves. With Cihan Metricwire, your story will be amplified and heard by the world. Contact us today to learn how we can help you get the reach and exposure you need
+                  Looking for more targeted placement? Our Sponsored Placement
+                  pack allows you to secure premium placements on select
+                  publishers in Africa, Europe, and North America. From Forbes
+                  and The Guardian to AllAfrica and more, we can help your brand
+                  get the placement it deserves. With Cihan Metricwire, your
+                  story will be amplified and heard by the world. Contact us
+                  today to learn how we can help you get the reach and exposure
+                  you need
                 </p>
               </article>
               <article class="blog-details-content">
@@ -75,7 +85,10 @@
                   class="lazy-img image-meta w-100"
                 />
                 <p>
-                    Get Featured in Bloomberg, The Guardian, Forbes, All Africa, Guardian, Punch, ThisDay, BusinessDay, Vanguard, The Cable, Nairametrics, The Nation, Independent, NewsGhana, Observer (Uganda) and much more.
+                  Get Featured in Bloomberg, The Guardian, Forbes, All Africa,
+                  Guardian, Punch, ThisDay, BusinessDay, Vanguard, The Cable,
+                  Nairametrics, The Nation, Independent, NewsGhana, Observer
+                  (Uganda) and much more.
                 </p>
                 <br />
                 <br />
@@ -114,10 +127,10 @@
           achieve your goals!
         </p>
         <a
-          href="/contact"
+          href="/cihan-form"
           class="btn-two fs-18 fw-500 wow fadeInUp"
           data-wow-delay="0.2s"
-          >Contact us</a
+          >Sign up</a
         >
       </div>
     </div>
