Paused on resend until dns is fully propagated

--- a/views/cihan-form.ejs
+++ b/views/cihan-form.ejs
@@ -33,14 +33,14 @@
 									</div>
 									<div class="col-12">
 										<div class="input-group-meta form-group mb-30">
-											<textarea placeholder="Your message*" name="message" data-error="Please leave us a message."></textarea>
+											<textarea placeholder="Your message*" name="message" required="required" data-error="Please leave us a message."></textarea>
 											<div class="help-block with-errors"></div>
 										</div>
 									</div>
 									<div class="col-12">
 										<div class="input-group-meta form-group mb-30">
 											<!-- <textarea placeholder="Your message*" name="message" required="required" data-error="Additional Information."></textarea> -->
-											<input type="file" name="file" id="" data-error="Upload files or documents">
+											<input type="file" name="file" id="" required="required" data-error="Upload files or documents">
 											<div class="help-block with-errors"></div>
 										</div>
 									</div>
