More form fields added to cihan signup form

--- a/views/cihan-form.ejs
+++ b/views/cihan-form.ejs
@@ -26,20 +26,48 @@
 
 									<div class="col-12">
 										<div class="input-group-meta form-group mb-40">
-											<label class="d-block" for="">Email Address*</label>
-											<input type="email" placeholder="daniel.smith@domain.com" name="email" required="required" data-error="Valid email is required.">
+											<label class="d-block" for="">Company Nmae*</label>
+											<input type="text" placeholder="Microsoft" name="company" required="required" data-error="Valid email is required.">
 											<div class="help-block with-errors"></div>
 										</div>
 									</div>
 									<div class="col-12">
+										<div class="input-group-meta form-group mb-40">
+											<label class="d-block" for="">Contact Details*</label>
+											<input type="text" placeholder="+234-818-2345" name="contact" required="required" data-error="Valid email is required.">
+											<div class="help-block with-errors"></div>
+										</div>
+									</div>
+									<div class="col-12">
+										<div class="input-group-meta form-group mb-40">
+											<label class="d-block" for="">Press Release Title*</label>
+											<input type="text" placeholder="Title" name="title" required="required" data-error="Valid email is required.">
+											<div class="help-block with-errors"></div>
+										</div>
+									</div>
+									<div class="col-12">
+										<div class="input-group-meta form-group mb-40">
+											<label class="d-block" for="">Press Release Photo Caption*</label>
+											<input type="text" placeholder="Alt text" name="caption" required="required" data-error="Valid email is required.">
+											<div class="help-block with-errors"></div>
+										</div>
+									</div>
+									<div class="col-12">
+										<div class="input-group-meta form-group mb-40">
+											<label class="d-block" for="">Source*</label>
+											<input type="text" placeholder="Related sources" name="source" required="required" data-error="Valid email is required.">
+											<div class="help-block with-errors"></div>
+										</div>
+									</div>
+									<!-- <div class="col-12">
 										<div class="input-group-meta form-group mb-30">
 											<textarea placeholder="Your message*" name="message" required="required" data-error="Please leave us a message."></textarea>
 											<div class="help-block with-errors"></div>
 										</div>
-									</div>
+									</div> -->
 									<div class="col-12">
 										<div class="input-group-meta form-group mb-30">
-											<!-- <textarea placeholder="Your message*" name="message" required="required" data-error="Additional Information."></textarea> -->
+											<label class="d-block" for="">Attach Press Release Document/Image*</label>
 											<input type="file" name="file" id="" required="required" data-error="Upload files or documents">
 											<div class="help-block with-errors"></div>
 										</div>
