--- a/views/get-contact-form-submissions.ejs
+++ b/views/get-contact-form-submissions.ejs
@@ -21,8 +21,8 @@
       }
 
       .table-wrapper {
-        width: min(900px, 100% - 3rem);
-        margin-inline: auto;
+        margin: auto;
+        width: 50%;
       }
 
       /* .table-container {
@@ -90,7 +90,6 @@
         font-size: 1.6rem;
       }
     </style>
-
   </head>
   <body>
     <main>
@@ -98,7 +97,7 @@
         <h1>Dashboard</h1>
         <table>
           <caption>
-            Submitted Contact Forms
+            Contact Form Submissions
           </caption>
           <tr>
             <th>Name</th>
@@ -120,31 +119,5 @@
         </div> -->
       </div>
     </main>
-
-    <!-- Javascript code for next and previous button -->
-    <script>
-      let images = [
-        "https://codelearningpoint.com/uploads/1627415311.jpg",
-        "https://codelearningpoint.com/uploads/1627415323.jpg",
-        "https://codelearningpoint.com/uploads/1627415302.jpg",
-      ];
-      let imageTag = document.querySelector(".imageTag");
-      let i = 0;
-
-      function next() {
-        if (i >= images.length - 1) {
-          return false;
-        }
-        i++;
-        imageTag.setAttribute("src", images[i]);
-      }
-      function previous() {
-        if (i <= 0) {
-          return false;
-        }
-        i--;
-        imageTag.setAttribute("src", images[i]);
-      }
-    </script>
   </body>
 </html>
