--- a/views/get-cihan-form-submissions.ejs
+++ b/views/get-cihan-form-submissions.ejs
@@ -21,7 +21,7 @@
       }
 
       .table-wrapper {
-        width: min(900px, 100% - 3rem);
+        width: min(1200px, 100% - 3rem);
         margin-inline: auto;
       }
 
@@ -62,7 +62,8 @@
       }
 
       img {
-        max-width: 100%;
+        max-width: 50%;
+        max-height: 200px;
         display: block;
       }
 
@@ -102,19 +103,25 @@
         <h1>Dashboard</h1>
         <table>
           <caption>
-            Submitted Contact Forms
+            Cihan Metricwire Form Submissions
           </caption>
           <tr>
             <th>Name</th>
-            <th>Email</th>
-            <th>Message</th>
-            <th>Documents</th>
+            <th>Company</th>
+            <th>Contact</th>
+            <th>Title</th>
+            <th>Caption</th>
+            <th>Source</th>
+            <th>Files</th>
           </tr>
           <% cihanMetricwireMessages.forEach(function(data){ %>
           <tr>
             <td data-cell="name"><%= data.name %></td>
-            <td data-cell="email"><%=data.email%></td>
-            <td data-cell="message"><%=data.message%></td>
+            <td data-cell="email"><%=data.company%></td>
+            <td data-cell="message"><%=data.contact%></td>
+            <td data-cell="message"><%=data.title%></td>
+            <td data-cell="message"><%=data.caption%></td>
+            <td data-cell="message"><%=data.source%></td>
             <td>
               <% if(data.uploadedDocumentInfo.mimetype === 'image/jpeg') { %>
               <img
@@ -128,8 +135,7 @@
               <object
                 data="<%= 'uploadFiles/' + data.uploadedDocumentInfo.filename %>"
                 type="application/pdf"
-                width="100%"
-                height="500px"
+                class="td-image"
               >
                 <p>
                   Unable to display PDF file.
