fix typo in cihan form

--- a/views/cihan-form.ejs
+++ b/views/cihan-form.ejs
@@ -26,7 +26,7 @@
 
 									<div class="col-12">
 										<div class="input-group-meta form-group mb-40">
-											<label class="d-block" for="">Company Nmae*</label>
+											<label class="d-block" for="">Company Name*</label>
 											<input type="text" placeholder="Microsoft" name="company" required="required" data-error="Valid email is required.">
 											<div class="help-block with-errors"></div>
 										</div>
