Mobile response form

--- a/views/get-cihan-form-submissions.ejs
+++ b/views/get-cihan-form-submissions.ejs
@@ -118,10 +118,10 @@
           <tr>
             <td data-cell="name"><%= data.name %></td>
             <td data-cell="email"><%=data.company%></td>
-            <td data-cell="message"><%=data.contact%></td>
-            <td data-cell="message"><%=data.title%></td>
-            <td data-cell="message"><%=data.caption%></td>
-            <td data-cell="message"><%=data.source%></td>
+            <td data-cell="contact"><%=data.contact%></td>
+            <td data-cell="title"><%=data.title%></td>
+            <td data-cell="caption"><%=data.caption%></td>
+            <td data-cell="source"><%=data.source%></td>
             <td>
               <% if(data.uploadedDocumentInfo.mimetype === 'image/jpeg') { %>
               <img
